Fix 'clear search' icon styles
It was much too large

--- a/www/templates/iframe/less/iframe.less
+++ b/www/templates/iframe/less/iframe.less
@@ -325,14 +325,14 @@
     display: inline-block;
     background-color: #d00000;
     background-position: center;
-    height: 24px;
-    width: 24px;
+    height: 1em;
+    width: 1em;
     border-radius: 13px;
     color: #fff;
     text-align: center;
     line-height: 1.1em;
-    font-size: 1.3em;
-    margin-left: -30px;
+    font-size: 1em;
+    margin-left: -1.25em;
     position: relative;
     font-family: sans-serif;
     cursor: pointer;
@@ -485,7 +485,7 @@
 
   .mh-caption-search-close {
     float: right;
-    margin-right: .75em;
+    margin-left: .75em;
     background: transparent;
     border: none;
   }
